overlays/dev/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grabtable-fe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  tls:
    - hosts:
        - grabtable.net
      secretName: grabtable-tls
  rules:
    - host: grabtable.net
      http:
        paths:
          - backend:
              service:
                name: grabtable-fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
